# BoardProvisioningBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  ISSUES.md  README.md  bot.py  bot_ws.py  docker-compose.yml  helper.py  log_config.py  oauth.py  oauth_manager.py  pyproject.toml  requirements.txt  storage_manager.py  webex_admin.py  webex_utils.py
deployment/: .env.example  DEPLOYMENT.md  boardbot.service  nginx.conf
templates/: oauth_error.html  oauth_success.html
tests/: bot_implementation.py  test_bot_logic.py  test_workspace_details.py  user_implementation.py
