[project]
name = "boardprovisioningbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "webexteamssdk>=1.7",
    "websockets>=16.0",
]
